eatwhere/k8s/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /fastsearch
            pathType: Prefix
            backend:
              service:
                name: fast-search-service
                port:
                  number: 80
          - path: /randomfood
            pathType: Prefix
            backend:
              service:
                name: random-food-service
                port:
                  number: 80
